logs/python-500px.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/fivehundredpx'...
Compiling './lib/python3.5/site-packages/fivehundredpx/auth.py'...
***   File "./lib/python3.5/site-packages/fivehundredpx/auth.py", line 57
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fivehundredpx/bind.py'...
***   File "./lib/python3.5/site-packages/fivehundredpx/bind.py", line 92
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_500px-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/blog.py'...
***   File "./lib/python3.5/site-packages/tests/blog.py", line 4
    print 'Usage: # python %s consumer_key consumer_secret request_token request_token_secret' % sys.argv[0]
                                                                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tests/collection.py'...
***   File "./lib/python3.5/site-packages/tests/collection.py", line 4
    print 'Usage: # python %s consumer_key consumer_secret request_token request_token_secret' % sys.argv[0]
                                                                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tests/oauth.py'...
***   File "./lib/python3.5/site-packages/tests/oauth.py", line 10
    print 'Usage: # python %s consumer_key consumer_secret' % sys.argv[0]
                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tests/photo.py'...
***   File "./lib/python3.5/site-packages/tests/photo.py", line 5
    print 'Usage: # python %s consumer_key consumer_secret request_token request_token_secret' % sys.argv[0]
                                                                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tests/upload.py'...
***   File "./lib/python3.5/site-packages/tests/upload.py", line 4
    print 'Usage: # python %s consumer_key consumer_secret request_token request_token_secret' % sys.argv[0]
                                                                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tests/user.py'...
***   File "./lib/python3.5/site-packages/tests/user.py", line 4
    print 'Usage: # python %s consumer_key consumer_secret request_token request_token_secret' % sys.argv[0]
                                                                                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
